# reglens

./: .gitignore  LICENSE  README.md  SECURITY.md  docker-compose.override.yml  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  railway.json
backend/alembic/: env.py
backend/alembic/versions/: 43a0e26fdf93_chunks_tsvector_column_and_gin_index.py  6205d83bde02_users_table_conversations_tenant_index.py  ab22f913edbf_baseline_schema.py  beb07ed3064a_assessment_tables.py  c4d8e1f0a2b3_assessment_clarification.py
backend/app/: cli.py  main.py
backend/app/assessments/: README.md  classify.py  engine.py  gaps.py  llm_json.py  mapping.py  profile.py  remediation.py  report.py  rulebook.py  rulebook.yaml  run.py  schema.py
backend/app/core/: config.py  errors.py  logging.py  security.py
backend/app/db/: base.py  models.py  session.py
backend/app/observability/: hardening.py  middleware.py  rag_metrics.py  redaction.py  tracing.py
backend/app/rag/: README.md
backend/app/services/: README.md  answer_cache.py  embedding_cache.py  embeddings.py  llm.py  rate_limit.py  redis.py
backend/evals/: README.md  assessment_eval.py  assessment_scenarios.json  cli.py  dataset.json  generation_eval.py  judge.py  loader.py  retrieval_eval.py  scenarios.py
backend/scripts/: dev_token.py
backend/tests/: conftest.py  test_assessment_eval.py  test_assessments.py  test_auth.py  test_chat_multiturn.py  test_evals.py  test_hardening.py  test_health.py  test_ingestion.py  test_rag.py  test_rate_limit_cache.py  test_rulebook.py  test_scenarios.py
(+69 files in other folders)
